Bug 192707 - Direct editing of factorisation task is broken
Summary: Direct editing of factorisation task is broken
Status: RESOLVED FIXED
Alias: None
Product: kbruch
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Sebastian Stein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-14 21:46 UTC by Sebastian Stein
Modified: 2011-09-23 19:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A patch that fixes this bug. (7.05 KB, patch)
2011-09-12 15:27 UTC, Luis Ángel Fernández Fernández
Details
The patch (6.67 KB, patch)
2011-09-12 17:08 UTC, Luis Ángel Fernández Fernández
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Stein 2009-05-14 21:46:05 UTC
Version:            (using Devel)
Installed from:    Compiled sources

It is possible to enter something in the result edit box using the keyboard instead of clicking on the number buttons. However, it seems to be not possible to enter more than one factor. I was not able to figure out how I could add a second factor.

In general, it is a good idea to allow entering the result directly using the keyboard. However, it must be clear how to enter additional prime factors like using the space, * or "x" key to separate them.
Comment 1 Sebastian Stein 2011-01-04 21:56:38 UTC
I'm working on this in Trunk/ as it is a major change and not something for a last minute change for 4.6...
Comment 2 Sebastian Stein 2011-01-04 22:04:22 UTC
SVN commit 1211750 by sstein:

work in progress, bug not fixed yet, backup current changes:
- add a derived KLineEdit class called PrimeFactorsLineEdit to handle prime
  factor input
- use PrimeFactorsLineEdit in exercise factorize
- compiles

CCBUG: 192707


 M  +1 -0      CMakeLists.txt  
 A             PrimeFactorsLineEdit.cpp   [License: GPL (v2+)]
 A             PrimeFactorsLineEdit.h   [License: GPL (v2+)]
 M  +3 -73     exercisefactorize.cpp  
 M  +2 -7      exercisefactorize.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1211750
Comment 3 Luis Ángel Fernández Fernández 2011-09-12 15:27:22 UTC
Created attachment 63588 [details]
A patch that fixes this bug.
Comment 4 Luis Ángel Fernández Fernández 2011-09-12 15:28:58 UTC
Comment on attachment 63588 [details]
A patch that fixes this bug.

I've uploaded this patch to the reviewboard but it seems you don't have an account there so I've uploaded here as well.
Comment 5 Luis Ángel Fernández Fernández 2011-09-12 17:08:00 UTC
Created attachment 63592 [details]
The patch

I've made some mistakes that I think I've fixed.
Comment 6 Sebastian Stein 2011-09-23 19:39:00 UTC
Git commit 07bd1eef1dd40a33af2350cc836ca84dcb40deb9 by Sebastian Stein.
Committed on 23/09/2011 at 21:33.
Pushed by sstein into branch 'master'.

fix editing of factorisation tasks

Now it is possible again to just use the keyboard to the factorisation
exercises.

Fix was contributed by Luis Angel Fernandez Fernandez. Many thanks to him for
fixing this long standing bug!

BUG: 192707
CCMAIL: laffdez@gmail.com

M  +84   -30   src/PrimeFactorsLineEdit.cpp
M  +25   -7    src/PrimeFactorsLineEdit.h
M  +50   -0    src/exercisefactorize.cpp
M  +5    -0    src/exercisefactorize.h

http://commits.kde.org/kbruch/07bd1eef1dd40a33af2350cc836ca84dcb40deb9
Comment 7 Sebastian Stein 2011-09-23 19:45:06 UTC
Git commit f3a4c476919be5d9ef60080137b8310ce6394730 by Sebastian Stein.
Committed on 23/09/2011 at 21:33.
Pushed by sstein into branch 'KDE/4.7'.

fix editing of factorisation tasks

Now it is possible again to just use the keyboard to the factorisation
exercises.

Fix was contributed by Luis Angel Fernandez Fernandez. Many thanks to him for
fixing this long standing bug!

BUG: 192707
CCMAIL: laffdez@gmail.com

M  +84   -30   src/PrimeFactorsLineEdit.cpp
M  +25   -7    src/PrimeFactorsLineEdit.h
M  +50   -0    src/exercisefactorize.cpp
M  +5    -0    src/exercisefactorize.h

http://commits.kde.org/kbruch/f3a4c476919be5d9ef60080137b8310ce6394730