fix editing of factorisation tasks

Now it is possible again to just use the keyboard to the factorisation
exercises.

Fix was contributed by Luis Angel Fernandez Fernandez. Many thanks to him for
fixing this long standing bug!

BUG: 192707
CCMAIL: laffdez@gmail.com